--- a/starter/index.html
+++ b/starter/index.html
@@ -69,7 +69,7 @@
           <button class="form__btn">OK</button>
         </form>
 
-         <li class="workout workout--running" data-id="1234567890">
+         <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
             <span class="workout__icon">🏃‍♂️</span>
@@ -91,9 +91,9 @@
             <span class="workout__value">178</span>
             <span class="workout__unit">spm</span>
           </div>
-        </li>
+        </li> -->
 
-        <li class="workout workout--cycling" data-id="1234567891">
+        <!-- <li class="workout workout--cycling" data-id="1234567891">
           <h2 class="workout__title">Cycling on April 5</h2>
           <div class="workout__details">
             <span class="workout__icon">🚴‍♀️</span>
@@ -115,7 +115,7 @@
             <span class="workout__value">223</span>
             <span class="workout__unit">m</span>
           </div>
-        </li> 
+        </li>  -->
       </ul>
 
       <!-- <p class="copyright">
